--- a/TICS200_Len/.vscode/settings.json
+++ b/TICS200_Len/.vscode/settings.json
@@ -3,5 +3,20 @@
         "editor.defaultFormatter": "ms-python.black-formatter"
     },
     "python.formatting.provider": "none",
-    "java.debug.settings.onBuildFailureProceed": true
+    "java.debug.settings.onBuildFailureProceed": true,
+    "sqltools.connections": [
+        {
+            "mysqlOptions": {
+                "authProtocol": "default"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "Local",
+            "database": "imdb_small",
+            "username": "root",
+            "connectionTimeout": 30
+        }
+    ]
 }
